--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "paypal-rest-sdk": "^1.8.1"
   }
 }
